Replace login flow.
